# athletes_brain

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
athletes_brain/: __init__.py  config.py  dataset.py  features.py  plots.py  plotting.py
athletes_brain/fig1/: README.md  __init__.py  brain_visualization.py  config.py  data_loader.py  main.py  statistical_analysis.py  utils.py
athletes_brain/fig2/: config.py  data_loader.py  main.py  model_training.py  modeling.py  preprocessing.py  stacked_models.py
athletes_brain/fig3/: config.py  data_loader.py  main.py  preprocessing.py  stacked_models.py  utils.py
athletes_brain/fig4/: calculate_network_measures.py
athletes_brain/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/behav/: behav.ipynb
notebooks/fig1/: fig1.ipynb  fig1_new.ipynb
notebooks/fig2/: fig2 copy.ipynb  fig2.ipynb  train_models.py
notebooks/fig3/: fig3.ipynb  train_models.py
notebooks/fig4/: fig4.ipynb
notebooks/learners/: climbers.ipynb  learners copy.ipynb  learners.ipynb  learners_passive.ipynb  learners_passive_predictions.ipynb  roi_prep.py
notebooks/predictions/: bag_analysis.ipynb  predictions.ipynb
notebooks/setup_data/: collect_relevant.ipynb  setup_data.ipynb
notebooks/skill_assessment/: skill_assessment.ipynb
scripts/: generate_fig1.py
